--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
           <aside class="respuesta">
             <article id="placeholderInfo">
-                <img src="imagenes/Muneco.png">
+                <img src="imagenes\Muneco.png">
                 <p id="warning" class="placeholder__text">Ingresa el texto que desees encriptar o desencriptar</p>
             </article>
             <article id="textoDes" class="ocultarTexto">
